--- a/ACM_2/register.html
+++ b/ACM_2/register.html
@@ -86,7 +86,7 @@
                         fullname: fullname,
                         email: email
                     })
-                    alert('user created');
+                    alert('user created!');
                     // ...
                 })
                 .catch((error) => {
