--- a/ACM_2/index.html
+++ b/ACM_2/index.html
@@ -6,34 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Register</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <link rel=" stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+
 </head>
 
 <body>
     <div class="form-container">
         <h1>LOGIN/REGISTER</h1>
-        <div class="register-container">
 
+        <div class="login-container">
             <div class="log-reg-link">
-                <a href="./index.html">Login</a>
+                <a href="./login.html">Login</a>
                 <a href="./register.html">Register</a>
             </div>
             <div class="page-title">
-                <h2>Register</h2>
+                <h2>LOGIN</h2>
             </div>
             <div class="form-table">
-                <form id="register">
-                    Full Name:
-                    <input type="text" id="fullname" placeholder="Fullname" required>
-                    Email Adress:
-                    <input type="email" id="Email" placeholder="Email ID" required>
+                <form id="login">
+                    Email ID:
+                    <input type="text" id="emailid" placeholder="Email Address" required>
                     Password:
-                    <input type="password" id="regpass" placeholder="Password" required>
-                    <input type="submit" id="signUp" value="Sign Up">
+                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="submit" id="login" name="login" value="login">
                 </form>
             </div>
             <div class="social-icons">
@@ -42,16 +41,16 @@
                 <i class="fa-brands fa-twitter"></i>
                 <i class="fa-solid fa-envelope"></i>
             </div>
+
         </div>
+
     </div>
-
-
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
-        import { getDatabase, set, ref } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-database.js";
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
-
+        import { getDatabase, set, ref, update } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-database.js";
+        import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
+        import { signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
         // TODO: Add SDKs for Firebase products that you want to use
         // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -71,22 +70,22 @@
         const database = getDatabase(app);
         const auth = getAuth();
 
+        login.addEventListener('click', (e) => {
 
-        signUp.addEventListener('click', (e) => {
+            var email = document.getElementById('emailid').value;
+            var password = document.getElementById('password').value;
 
-            var email = document.getElementById('Email').value;
-            var fullname = document.getElementById('fullname').value;
-            var password = document.getElementById('regpass').value;
-
-            createUserWithEmailAndPassword(auth, email, password)
+            signInWithEmailAndPassword(auth, email, password)
                 .then((userCredential) => {
                     // Signed in 
                     const user = userCredential.user;
-                    set(ref(database, 'users/' + user.uid), {
-                        fullname: fullname,
-                        email: email
+
+                    const dt = new Date();
+                    update(ref(database, 'users/' + user.uid), {
+                        last_login: dt,
                     })
-                    alert('user created!');
+
+                    alert('User logged In!')
                     // ...
                 })
                 .catch((error) => {
@@ -94,24 +93,40 @@
                     const errorMessage = error.message;
 
                     alert(errorMessage);
-                    // ..
                 });
-
         });
+
         const user = auth.currentUser;
         onAuthStateChanged(auth, (user) => {
             if (user) {
                 // User is signed in, see docs for a list of available properties
                 // https://firebase.google.com/docs/reference/js/firebase.User
                 const uid = user.uid;
+
                 // ...
             } else {
                 // User is signed out
                 // ...
             }
         });
+
+        logout.addEventListener('click', (e) => {
+
+            signOut(auth).then(() => {
+                // Sign-out successful.
+                alert('User Logged Out.')
+            }).catch((error) => {
+                // An error happened.
+                const errorCode = error.code;
+                const errorMessage = error.message;
+
+                alert(errorMessage);
+            });
+        })
+
     </script>
 
 </body>
+
 
 </html>
