--- a/ACM_2/index.html
+++ b/ACM_2/index.html
@@ -20,7 +20,7 @@
 
         <div class="login-container">
             <div class="log-reg-link">
-                <a href="./login.html">Login</a>
+                <a href="./index.html">Login</a>
                 <a href="./register.html">Register</a>
             </div>
             <div class="page-title">
